--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: MM
-email:
+minimal_mistakes_skin: "air"
+minimal_mistakes_skin_dark: "dark"
+email: kellen.miller12@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -7,8 +9,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 twitter_username: username
 github_username: kellen-miller
 repository: "https://github.com/kellen-miller/kellen-miller.github.io"
-minimal_mistakes_skin: air
-minimal_mistakes_skin_dark: dark
+
 search: true
 breadcrumbs: true
 
