added light/dark switch
Signed-off-by: Kellen Miller <kellen.miller12@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,9 @@ breadcrumbs: true
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
+head_scripts:
+  - /assets/js/toggle-theme.js
 # Outputting
 permalink: /:categories/:title/
 paginate: 5 # amount of posts to show
