--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: kellen-miller.github.io
 minimal_mistakes_skin: air
-minimal_mistakes_skin_dark: dark
+minimal_mistakes_skin2: dark
 email: kellen.miller12@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
